# WeatherDash-TUI

./: .gitignore  LICENSE  README.md  pyproject.toml
weatherdash/: __init__.py
