[project]
name = "weatherdash-tui"
version = "1.0.0"
description = "A beautiful terminal weather dashboard with ASCII art icons, multi-city support, and offline caching"
authors = [{name = "WeatherDash Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "textual>=0.47.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
]

[project.scripts]
weatherdash = "weatherdash:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
